# FMM3D

./: .codepod.yml  .gitignore  .gitpod.yml  .readthedocs.yaml  .theiapod.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING  Dockerfile  INPUT.md  LICENSE  README.md  codepod_run.sh  document.html  ifort_matlab.def  make.inc  make.inc.icc  make.inc.macos.gfortran  make.inc.macos.gnu  make.inc.macos.intel  make.inc.macos.nag  make.inc.macos_arm64.gnu  make.inc.macosx  make.inc.macosx_gcc  make.inc.nag  make.inc.nvhpc  make.inc.windows  make.inc.windows.mingw  makefile  makefile.mac  makefile.windows  makefile.windows.intel  meson.build  pyproject.toml
.claude/: settings.json
.github/workflows/: build_fmm3dpy_wheels.yml  linux.yml  linux_build.sh  python.yml  python_build.sh  python_build_posix.sh  python_build_win.ps1  python_cmake.yml  python_test.sh  python_test_posix.sh  python_test_win.ps1
c/: README.md  cprini.h  hfmm3d.h  hfmm3d_c.h  hfmm3d_example.c  hfmm3d_example.make  hfmm3d_vec_example.c  hfmm3d_vec_example.make  hfmm3ddir.h  lfmm3d_c.h  lfmm3d_example.c  lfmm3d_example.make  lfmm3d_vec_example.c  lfmm3d_vec_example.make  makefile  test_hfmm3d.c  test_lfmm3d.c  utils.c  utils.h
c/Common/: cprini.c  utils.h
c/Helmholtz/: hfmm3dpartwrap.h
devel/code-generation/: instructions.md  jinjaroot.yaml  lfmm3dwrap.f  lfmm3dwrap.f.j2
docker/codepod_gfortran/: Dockerfile  readme.txt
docker/gitpod_gfortran/: Dockerfile  readme.txt
docker/theiapod_gfortran/: Dockerfile  readme.txt
docs/: ackn.rst  conf.py  fortran-c.rst  fortran-c1.rst.save1  fortran-c2.rst.save1  fortran-c3.rst  fortran-c4.rst.save1  fortrandocs_helm.raw  fortrandocs_helm2.raw  fortrandocs_helm2_vec.raw  fortrandocs_helm_header.raw  fortrandocs_helm_header_vec.raw  fortrandocs_helm_opt1.raw  fortrandocs_helm_opt2.raw  fortrandocs_helm_opt3.raw  fortrandocs_helm_opt4.raw  fortrandocs_lap.raw  fortrandocs_lap2.raw  fortrandocs_lap2_vec.raw  fortrandocs_lap_header.raw  fortrandocs_lap_header_vec.raw  genfortdocumentation.py  genfortdocumentation_helm.py  genfortdocumentation_lap.py  genfortdocumentation_opt1.py  genfortdocumentation_opt2.py  genfortdocumentation_opt3.py  genfortdocumentation_opt4.py  genforttable.py  genmatlabhelp.sh  genpdfmanual.sh  index.rst  install.rst  install.rst.bak  julia.rst  legacy.rst  math.rst  matlab.rst  matlabhelp.raw  python.rst  (+3 more)
docs/_static/: custom.css
examples/: README.md  emfmm3d_example.f  emfmm3d_example.make  hfmm3d_example.f  hfmm3d_example.make  hfmm3d_legacy_debug.f  hfmm3d_legacy_example.f  hfmm3d_legacy_example.make  hfmm3d_memest_example.f  hfmm3d_memest_example.make  hfmm3d_plan_example.f  hfmm3d_vec_example.f  hfmm3d_vec_example.make  hfmm3dstost.make  hfmm3dstost_dr.f  lfmm3d_debug1.f  lfmm3d_example.f  lfmm3d_example.make  lfmm3d_legacy_example.f  lfmm3d_legacy_example.make  lfmm3d_vec_example.f  lfmm3d_vec_example.make  lfmm3dpart.make  lfmm3dpart_dr.f  lfmm3dstos.make  lfmm3dstos_dr.f  lfmm3dstost.make  lfmm3dstost_dr.f  lfmm3dstot.make  lfmm3dstot_dr.f  rfmm3dstos.make  rfmm3dstos_dr.f  rfmm3dstost.make  rfmm3dstost_dr.f  rfmm3dstot.make  rfmm3dstot_dr.f  stfmm3d_example.f  stfmm3d_example.make
julia/: LICENSE  Manifest.toml  Project.toml  README.md
julia/FMM3D/: Manifest.toml  Project.toml
julia/examples/: hfmm3dexample.jl  lfmm3dexample.jl
julia/src/: FMM3D.jl
julia/test/: runtests.jl
matlab/: Contents.m  MyParLoad.m  Readme.m  em3ddir.m  emfmm3d.m  emfmm3d_example.m  fmm3d.c  fmm3d.mexa64  fmm3d.mexmaci64  fmm3d.mexw64  fmm3d.mw  fmm3d_legacy.c  fmm3d_legacy.mexa64  fmm3d_legacy.mexmaci64  fmm3d_legacy.mexw64  fmm3d_legacy.mw  fmm3d_r2019.mw  h3ddir.m  h3dpartdirect.m  hfmm3d.m  hfmm3dLegacyTest.m  hfmm3d_big_example.m  hfmm3d_example.m  hfmm3dpart.m  l3ddir.m  l3dpartdirect.m  lfmm3d.m  lfmm3dLegacyTest.m  lfmm3d_big_example.m  lfmm3d_example.m  lfmm3dpart.m  r3ddir.m  readme.md  rfmm3d.m  st3ddir.m  stfmm3d.m  stfmm3dPerfTest.m  stfmm3d_example.m  stfmm3d_simpletest.m  test_emfmm3d.m  (+9 more)
python/: CMakeLists.txt  hfmmexample.py  hfmmtest.py  meson.build  pyproject.toml  readme.md  readme.txt  rfmmexample.py  setup.py  stfmm3d_example.py
python/examples/: emfmm3d_example.py
python/fmm3dpy/: __init__.py  fmm3d.py
python/test/: hfmmtest.py  rfmmtest.py  test_hfmm.py  test_lfmm.py  test_rfmm.py
src/: dfft.f  prini.f  pts_tree3d.f  rotproj.f  yrecursion.f
src/Common/: besseljs3d.f  cdjseval3d.f  cumsum.f  d3hplratree.f  dfft.f  dlaran.f  fmmcommon.f  hkrand.f  legeexps.f  prini.f  prinm.f  projections.f  pts_tree3d.f  rotgen.f  rotgen2.f  rotproj.f  rotviarecur.f  rotviarecur3.f  second-r8.f  tree_lr_3d.f  tree_routs3d.f  yrecursion.f
src/Helmholtz/: h3dcommon.f  h3dterms.f  h3dtrans.f  helmkernels.f  helmkernels_dr.f  helmkernels_fast.f  helmkernels_hess.f  helmrouts3d.f  helmrouts3d.make  helmrouts3d_dr.f  hfmm3d.f  hfmm3d2.f  hfmm3d_legacy.f  hfmm3d_memest.f  hfmm3d_mps.f90  hfmm3d_ndiv.f  hfmm3d_plan.f  hfmm3dmain.f  hfmm3dpart.f  hfmm3dpartwrap.f  hfmm3dpartwrap_vec.f  hfmm3dwrap.f  hfmm3dwrap_legacy.f  hfmm3dwrap_vec.f  hndiv.f  hndiv_fast.f  hnumfour.f  hnumphys.f  hpwrouts.f  hwts3.f  hwts3e.f  hwts_3d_iprec0.txt  hwts_3d_iprec1.txt  hwts_3d_iprec2.txt  hwts_3d_iprec3.txt  hwts_3d_iprec4.txt  nfour.txt  nphys.txt  numphysfour.f  projections.f  (+1 more)
src/Laplace/: l3dterms.f  l3dtrans.f  l3dtrans_vec.f  lapkernels.f  lapkernels_dr.f  lapkernels_fast.f  lapkernels_hess.f  laprouts3d.f  laprouts3d_hess.f  laprouts3d_vec.f  lfmm3d.f  lfmm3d2.f  lfmm3d_ndiv.f  lfmm3dpart.f  lfmm3dpartwrap.f  lfmm3dpartwrap_vec.f  lfmm3dwrap.f  lfmm3dwrap_legacy.f  lfmm3dwrap_vec.f  lndiv.f  lndiv_fast.f  lpwrouts.f  lwtsexp_sep1.f  lwtsexp_sep2.f  rfmm3dpartwrap.f  rfmm3dpartwrap_vec.f
src/Maxwell/: emfmm3d.f90
src/Representation/: maxwellie.f
src/Stokes/: stfmm3d.f  stokkernels.f
test/: hfmm3dparttest_dr.f  hfmm3dparttest_vec_dr.f  makefile  makefile_vec
test/Helmholtz/: run_helmtest.sh  run_helmtest_ext.sh  test_helmkernels_omp.f90  test_helmkernels_omp.make  test_helmrouts3d.f  test_helmrouts3d.make  (+25 more)
vec-kernels/: Makefile  mload.sh
(+72 files in other folders)
