[build-system]
build-backend = 'mesonpy'
requires = [
    "meson-python",

    # numpy requirement for wheel builds for distribution on PyPI - building
    # against 2.x yields wheels that are also compatible with numpy 1.x at
    # runtime.
    # Note that building against numpy 1.x works fine too - users and
    # redistributors can do this by installing the numpy version they like and
    # disabling build isolation.
    "numpy>=2.0.0",
]

[project]
name = "fmm3dpy"
description = "This package contains basic routines for Laplace, Helmholtz, Stokes and Maxwell fast multipole methods in three dimensions"
python_requires = ">=3.10.0"
license = { text = "Apache Software License" }
authors = [
    { name = "Zydrunas Gimbutas" },
    { name = "Leslie Greengard" },
    { name = "Libin Lu" },
    { name = "Jeremy Magland" },
    { name = "Dhairya Malhotra" },
    { name = "Michael O'Neil" },
    { name = "Manas Rachh", email = "mrachh@flatironinstitute.org" },
    { name = "Vladimir Rokhlin" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26.4",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/flatironinstitute/FMM3D"
